GEOT-3595: app-schema-resolver schema downloading fails for non-canonical data directory
git-svn-id: http://svn.osgeo.org/geotools/trunk@37303 e5c1c795-43da-0310-a71f-fac65c449510